--- a/resources/style/purple_theme.css
+++ b/resources/style/purple_theme.css
@@ -1,32 +1,32 @@
 /*LOG_IN and REGISTRATION START*/
 
 .background {
-    background-color: #171722;
+    background-color: #341948;
 }
 
 .auth_main_box {
-    background: #212130;
+    background: #8155BA;
     border-radius: 20px;
 }
 
 .auth_entry_field {
-    background: #434461;
+    background: #A16AE8;
     border-radius: 60px;
     border-style: solid;
-    border-color: #434461;
+    border-color: #A16AE8;
     outline: none;
     font-family: 'JetBrains Mono';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 26px;
-    color: #6E78A8;
+    color: #E6E6FA;
     transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
     box-shadow: 0px 0px 20px -18px;
 }
 
 .auth_entry_field:hover {
-    border: 2px solid #6E78A8;
+    border: 2px solid #E6E6FA;
     box-shadow: 0px 0px 20px -17px;
 }
 
@@ -35,7 +35,7 @@
 }
 
 .auth_entry_field:focus {
-    border: 2px solid #7AA2F7;
+    border: 2px solid #E6E6FA;
 }
 
 .auth_welcome_to_the_dark {
@@ -44,11 +44,11 @@
     font-weight: 400;
     font-size: 30px;
     line-height: 40px;
-    color: #B1BAE6;
+    color: #E6E6FA;
 }
 
 .auth_button {
-    background: #13131A;
+    background: #332F63;
     border-radius: 60px;
     outline: none;
     font-family: 'JetBrains Mono';
@@ -56,7 +56,7 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 26px;
-    color: #B1BAE6;
+    color: #E6E6FA;
     transition: all 0.3s ease-in-out;
     outline-color: transparent;
     border-color: transparent;
@@ -65,12 +65,12 @@
 
 .auth_button:hover {
     transform: translateY(-4px) translateX(-2px);
-    box-shadow: 2px 5px 0 0 #565F89;
+    box-shadow: 2px 5px 0 0 #B4A8FF;
 }
 
 .auth_button:active {
     transform: translateY(2px) translateX(1px);
-    box-shadow: 0 0 0 0 #565F89;
+    box-shadow: 0 0 0 0 #B4A8FF;
 }
 
 .auth_dont_or_have_account {
@@ -79,7 +79,7 @@
     font-weight: 400;
     font-size: 15px;
     line-height: 20px;
-    color: #B1BAE6;
+    color: #E6E6FA;
 }
 
 .auth_sign_button {
@@ -88,7 +88,7 @@
     font-weight: 400;
     font-size: 15px;
     line-height: 20px;
-    color: #565F89;
+    color: #B4A8FF;
     border-color: transparent;
     background: transparent;
     text-decoration-line: underline;
@@ -101,12 +101,11 @@
     border-color: transparent;
     background: transparent;
     text-decoration-line: underline;
-    color: #0269A4;
+    color: #E6E6FA;
     outline-color: transparent;
     border-color: transparent;
     box-shadow: none;
 }
-
 /*LOG_IN and REGISTRATION START*/
 
 
@@ -114,11 +113,10 @@
 /*HOME START*/
 .home {
     margin: 46px 0px 47px 0px;
-    background: #13131A;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #341948;
+    border: 1px solid #8155BA;
     border-radius: 20px;
 }
-
 /*HOME END*/
 
 
@@ -126,22 +124,26 @@
 /*LEFT MENU BAR START*/
 .left_menu_bar {
     margin: 46px 22px 47px 23px;
-    background: #13131A;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #341948;
+    border: 1px solid #8155BA;
     border-radius: 20px;
 }
 
 .profile_avatar_btn {
     border-radius: 50%;
-    background-position: 100% 100%;
+    border-width: 2px;
+    border-color: transparent;
     background-repeat: no-repeat;
     background-image: url(../../resources/images/test_avatar1.jpg);
+    background-position: center;
+    border-color: transparent;
+    box-shadow: none;
 }
 
 
 .profile_avatar_btn:hover {
     border-width: 2px;
-    border-color: #7AA2F7;
+    border-color: #C55FFC;
     transition: 0.5s;
 }
 
@@ -155,15 +157,15 @@
     border-radius: 10px;
     background: none;
     background-repeat: no-repeat;
-    background-image: url(../../resources/images/home_btn.png);
-    background-color: #4A4A66;
+    background-image: url(../../resources/images/home_btn_purple.png);
+    background-color: #7954A1;
     background-position: center;
     outline-color: transparent;
     box-shadow: none;
 }
 
 .home_btn:hover {
-    background-color: #4A4A66;
+    background-color: #7954A1;
     transition: 0.5s;
 }
 
@@ -178,7 +180,7 @@
     border-color: transparent;
     background: transparent;
     background-repeat: no-repeat;
-    background-image: url(../../resources/images/chats_btn.png);
+    background-image: url(../../resources/images/chats_btn_purple.png);
     background-position: center;
     outline-color: transparent;
     border-color: transparent;
@@ -186,7 +188,7 @@
 }
 
 .chats_btn:hover {
-    background-color: #4A4A66;
+    background-color: #7954A1;
     transition: 0.5s;
 }
 
@@ -200,7 +202,7 @@
     border-color: transparent;
     background: transparent;
     background-repeat: no-repeat;
-    background-image: url(../../resources/images/settings_btn.png);
+    background-image: url(../../resources/images/settings_btn_purple.png);
     background-position: center;
     outline-color: transparent;
     border-color: transparent;
@@ -208,7 +210,7 @@
 }
 
 .settings_btn:hover {
-    background-color: #4A4A66;
+    background-color: #7954A1;
     transition: 0.5s;
 }
 
@@ -222,7 +224,7 @@
     border-color: transparent;
     background: transparent;
     background-repeat: no-repeat;
-    background-image: url(../../resources/images/achievements_btn.png);
+    background-image: url(../../resources/images/achievements_btn_purple.png);
     background-position: center;
     outline-color: transparent;
     border-color: transparent;
@@ -230,7 +232,7 @@
 }
 
 .achievements_btn:hover {
-    background-color: #4A4A66;
+    background-color: #7954A1;
     transition: 0.5s;
 }
 
@@ -245,7 +247,7 @@
     border-color: transparent;
     background: transparent;
     background-repeat: no-repeat;
-    background-image: url(../../resources/images/log_out_btn.png);
+    background-image: url(../../resources/images/log_out_btn_purple.png);
     background-position: center;
     outline-color: transparent;
     border-color: transparent;
@@ -253,14 +255,13 @@
 }
 
 .log_out_btn:hover {
-    background-color: #4A4A66;
+    background-color: #7954A1;
     transition: 0.5s;
 }
 
 .log_out_btn:active {
     transform: scale(0.7);
 }
-
 /*LEFT MENU BAR END*/
 
 
@@ -271,18 +272,17 @@
 }
 
 .mini_groups_grid {
-    background: #13131A;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #341948;
+    border: 1px solid #8155BA;
     border-radius: 20px;
 }
-
 .mini_groups_box {
     margin: 10px 20px;
 }
 
 .mini_chats {
-    background: #13131A;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #341948;
+    border: 1px solid #8155BA;
     border-radius: 20px;
 }
 
@@ -293,7 +293,7 @@
 
 .chat_line {
     border-radius: 20px;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    border: 1px solid #8155BA;
 }
 
 .avatar_grid {
@@ -301,14 +301,14 @@
 }
 
 .chat_username {
-    color: #B1BAE6;
+    color: #E6E6FA;
     font-family: 'Open Sans';
     font-size: 14px;
     line-height: 24px;
 }
 
 .chat_message {
-    color: #B1BAE6;
+    color: #E6E6FA;
     font-family: 'Open Sans';
     font-size: 12px;
     line-height: 24px;
@@ -320,34 +320,34 @@
 
 
 .chats {
-    background: #171722;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #281437;
+    border: 1px solid #8155BA;
     border-radius: 20px;
 }
 
 .main_box_style_blurred {
-    background: #13131A;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #341948;
+    border: 1px solid #8155BA;
     border-radius: 20px;
     filter: blur(5px);
 }
 
 .current_dirrect_message_box {
-    background: #171722;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #281437;
+    border: 1px solid #8155BA;
     border-radius: 20px;
 }
 
 .current_dirrect_message_box_blurred {
-    background: #171722;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #281437;
+    border: 1px solid #8155BA;
     border-radius: 20px;
     filter: blur(5px);
 }
 
 .search_bar_grid {
-    background: #13131A;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #341948;
+    border: 1px solid #8155BA;
     border-radius: 20px;
 }
 
@@ -357,8 +357,8 @@
 }
 
 .search_bar_box_blurred {
-    background: #13131A;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #341948;
+    border: 1px solid #8155BA;
     border-radius: 20px;
     filter: blur(5px);
 }
@@ -368,18 +368,18 @@
 }
 
 .search_bar_box:focus {
-    border: 2px solid #7AA2F7;
+    border: 2px solid #9388A2;
 }
 
 
 .search_btn {
     border: none;
     background: none;
-    background-image: url(../../resources/images/search_btn.png);
+    background-image: url(../../resources/images/search_btn_purple.png);
     background-repeat: no-repeat;
     background-position: center;
     outline-color: transparent;
-    border-color: #7AA2F7;
+    border-color: #9388A2;
     box-shadow: none;
     outline: none;
 }
@@ -391,7 +391,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 22px;
-    color: #7AA2F7;
+    color: #9388A2;
     border-color: transparent;
     background: transparent;
     background-repeat: no-repeat;
@@ -406,12 +406,13 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 30px;
-    color: rgba(122, 162, 247, 0.5);
+    color: #9388A2;
 }
 
 .create_new_chat_btn {
+    border-color: transparent;
     background: transparent;
-    background-image: url(../../resources/images/create.png);
+    background-image: url(../../resources/images/create_purple.png);
     background-repeat: no-repeat;
     background-position: center;
     outline-color: transparent;
@@ -440,27 +441,26 @@
     text-transform: uppercase;
     transition: 0.5s;
     transition-property: box-shadow;
-    background: #7AA2F7;
+    background: #9388A2;
     box-shadow: 0 0 25px #647295;
 }
 
 .lets_start:hover {
     box-shadow: 0 0 5px #6582C8,
-        0 0 25px #647295,
-        0 0 50px #6582C8,
-        0 0 100px #647295;
+    0 0 25px #647295,
+    0 0 50px #6582C8,
+    0 0 100px #647295;
 }
 
 .lets_start:active {
     transform: translateY(-1px);
 }
-
 /*CHATS CONTAINER END*/
 
 /*LOG OUT START*/
 .log_out_box {
     background: #212130;
-    /*border: 1px solid rgba(122, 162, 247, 0.35);*/
+    /*border: 1px solid #8155BA;*/
     border-radius: 20px;
 }
 
@@ -470,7 +470,7 @@
     font-weight: 400;
     font-size: 30px;
     line-height: 40px;
-    color: #B1BAE6;
+    color: #E6E6FA;
 }
 
 .yes_btn {
@@ -479,7 +479,7 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 26px;
-    color: #B1BAE6;
+    color: #E6E6FA;
     border: 2px solid #434461;
     border-radius: 60px;
     transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
@@ -491,7 +491,7 @@
 }
 
 .yes_btn:hover {
-    color: #B1BAE6;
+    color: #E6E6FA;
     background-color: #434461;
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
     transform: translateY(-2px);
@@ -508,8 +508,8 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 26px;
-    color: #B1BAE6;
-    border: 2px solid #13131A;
+    color: #E6E6FA;
+    border: 2px solid #341948;
     border-radius: 60px;
     transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
     background-color: transparent;
@@ -521,8 +521,8 @@
 
 
 .no_btn:hover {
-    color: #B1BAE6;
-    background-color: #13131A;
+    color: #E6E6FA;
+    background-color: #341948;
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
     transform: translateY(-2px);
 }
@@ -531,167 +531,16 @@
     box-shadow: none;
     transform: translateY(0);
 }
-
 /*LOG OUT END*/
-
-/*YOUR PROFILE START*/
-
-.profile_help_box {
-    margin: 18px 268px 24px 268px;
-}
-
-.profile_grid_for_img {
-    border-radius: 50%;
-    margin-right: 138px;
-    margin-left: 138px;
-}
-
-.profile_grid_scale {
-    background: #171722;
-    border-radius: 20px;
-    margin-right: 114px;
-    margin-left: 114px;
-}
-
-.profile_grid_body {
-    border: 1px solid rgba(122, 162, 247, 0.35);
-    border-radius: 20px;
-}
-
-.exp_box {
-    background: #7AA2F7;
-    border-radius: 20px;
-}
-
-.mini_exp_box {
-    background: #7AA2F7;
-    border-radius: 20px;
-}
-
-.exp_count_label {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 20px;
-
-
-    color: #4A4A66;
-}
-
-.name_label {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 27px;
-
-    color: #7AA2F7;
-}
-
-.name_entry {
-    background: #13131A;
-    border-radius: 10px;
-    border-style: solid;
-    border-color: #4A4A66;
-    outline: none;
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 22px;
-
-    color: #B1BAE6;
-}
-
-.name_entry:hover {
-    border: 2px solid #7AA2F7;
-    box-shadow: 0px 0px 20px -17px;
-}
-
-.name_entry:active {
-    transform: scale(0.99);
-}
-
-.name_entry:focus {
-    border: 2px solid #7AA2F7;
-}
-
-.bio_label {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 27px;
-
-    color: #7AA2F7;
-}
-
-.bio_box {
-    background: #13131A;
-    border-radius: 10px;
-    border: 1px solid #4A4A66;
-    outline: none;
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 22px;
-}
-
-.bio_box:hover {
-    border: 2px solid #7AA2F7;
-    box-shadow: 0px 0px 20px -17px;
-}
-
-.bio_box:active {
-    transform: scale(0.99);
-}
-
-.bio_box:focus {
-    border: 2px solid #7AA2F7;
-}
-
-
-.bio_entry {
-    background: transparent;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    box-shadow: none;
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 22px;
-
-    color: #B1BAE6;
-}
-
-.bio_entry:hover {
-    border: none;
-    box-shadow: none;
-}
-
-.bio_entry:active {
-    transform: scale(0.99);
-}
-
-.bio_entry:focus {
-    border: none;
-}
-
-/*YOUR PROFILE END*/
 
 /*ACHIEVEMENTS START*/
 
 .achievements_grid {
     margin: 47px 0px 48px 0px;
 }
-
 .achievements_box {
-    background: #171722;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #281437;
+    border: 1px solid #8155BA;
     border-radius: 20px;
 }
 
@@ -700,7 +549,7 @@
     border-radius: 50%;
     background: none;
     background-repeat: no-repeat;
-    background-image: url(../../resources/images/achievements_icon_btn.png);
+    background-image: url(../../resources/images/achievements_icon_btn_purple.png);
     background-color: transparent;
     background-position: center;
     outline-color: transparent;
@@ -712,9 +561,9 @@
     font-style: normal;
     font-weight: 400;
     line-height: 30px;
-    color: #B1BAE6;
+    color: #E6E6FA;
     font-size: 1.1em;
-    background: #171717;
+    background: #A16AE8;
     box-shadow: none;
     border: none;
     border-radius: 15px;
@@ -727,31 +576,31 @@
     border-radius: 15px;
     transform: translateY(-10px);
     box-shadow: 0 15px 0 -4px #39a2db,
-        0 16px 10px -3px #39a2db,
-        0 7px 0 -2px #EEEEFF;
+    0 16px 10px -3px #39a2db,
+    0 7px 0 -2px #EEEEFF;
 }
 
 .achievements_label_btn:active {
     transition: all 0.2s;
     transform: translateY(-5px);
     box-shadow: 0 2px 0 -2px #EEEEFF,
-        0 8px 0 -4px #39a2db,
-        0 12px 10px -3px #39a2db;
+    0 8px 0 -4px #39a2db,
+    0 12px 10px -3px #39a2db;
 }
 
 .first_hbox {
-    background: #171722;
+    background: #281437;
 }
 
 .achievement_card {
-    background: #13131A;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #341948;
+    border: 1px solid #8155BA;
     border-radius: 20px;
     transition: all 0.5s;
 }
 
 .achievement_card:hover {
-    border-color: #008bf8;
+    border-color: #EFDCF9;
     box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
 }
 
@@ -763,7 +612,7 @@
     line-height: 24px;
     /* identical to box height */
 
-    color: #B1BAE6;
+    color: #E6E6FA;
 }
 
 .achievement_desc_text {
@@ -775,7 +624,7 @@
     /* identical to box height */
 
 
-    color: #7AA2F7;
+    color: #dfa5ff;
 }
 
 .complete_btn {
@@ -802,33 +651,27 @@
 }
 
 .second_hbox {
-    background: #171722;
+    background: #281437;
 }
-
-.scrollbar {
-    background: #13131A;
-    border-radius: 10px;
-}
-
 /*ACHIEVEMENTS EMD*/
 
 /*SETTINGS START*/
 
 .settings_main_grid {
-    margin: 46px 0px 45px 0px;
-    background: #171722;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    margin: 46px 0px 47px 0px;
+    background: #281437;
+    border: 1px solid #8155BA;
     border-radius: 20px;
 }
 
 .settings_grid_help {
-    margin: 29px 265px 18px 265px;
+    margin: 29px 266px 18px 266px;
 }
 
 .settings_grid_for_ico {
     margin: 0px 138px;
     border-radius: 50%;
-    border: 2px solid #7AA2F7;
+    border: 1px solid #8155BA;
     background: none;
 }
 
@@ -836,7 +679,7 @@
     border-radius: 50%;
     background: none;
     background-repeat: no-repeat;
-    background-image: url(../../resources/images/settings_icon_btn.png);
+    background-image: url(../../resources/images/settings_icon_btn_purple.png);
     background-color: transparent;
     background-position: center;
     outline-color: transparent;
@@ -845,13 +688,13 @@
 
 .settings_grid_with_lab {
     margin: 0px 157px;
-    background: #171717;
+    background: #A16AE8;
     border-radius: 15px;
 }
 
 .settings_lab {
     margin: 5px 55px;
-    color: #B1BAE6;
+    color: #E6E6FA;
     font-family: 'Open Sans';
     font-weight: 400;
     line-height: 30px;
@@ -859,54 +702,37 @@
 }
 
 .settings_grid_with_body {
-    border: 1px solid rgba(122, 162, 247, 0.35);
-    background: #13131A;
+    border: 1px solid #8155BA;
+    background: #341948;
     border-radius: 20px;
 }
 
 .settings_grid_with_color_scheme {
     /*margin: 20px 20px;*/
     border-radius: 20px;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    border: 1px solid #8155BA;
     margin: 30px 140px 15px 140px;
 }
 
 .settings_first_scheme_btn {
     margin: 10px 21.25px 10px 10.625px;
     border-radius: 50%;
-    border: 1px solid rgba(122, 162, 247, 0.35);
-    background: #171722;
+    border: 1px solid #8155BA;
+    background: #281437;
 }
 
 .settings_second_scheme_btn {
     margin: 10px 10.625px 10px 10.625px;
     border-radius: 50%;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    border: 1px solid #8155BA;
     background: #341948;
 }
 
 .settings_third_scheme_btn {
     margin: 10px 10.625px 10px 21.25px;
     border-radius: 50%;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    border: 1px solid #8155BA;
     background: black;
 }
 
 /*SETTINGS END*/
-
-
-.choose_profile_avatar_btn {
-    border-color: transparent;
-    border-radius: 50%;
-    background: none;
-    background-repeat: no-repeat;
-    background-image: url(../../resources/images/choose_profile_avatar_btn.png);
-    background-color: transparent;
-    background-position: center;
-    outline-color: transparent;
-    box-shadow: none;
-}
-
-.level_box {
-    background: #13131A;
-}
