registration error handling with some bugs

--- a/resources/style/theme.css
+++ b/resources/style/theme.css
@@ -140,7 +140,7 @@
     box-shadow: none;
 }
 
-.password_error_label {
+.error_label {
     
     font-family: 'JetBrains Mono';
     font-style: normal;
